# KarouGB

./: .gitignore  CMakeLists.txt  CMakeLists.txt.in  readme.md
KarouGB/: KarouGB.1  ResourcePath.mm  apu.h  apu_channel.h  apu_squarewave_channel.h  buttons.cpp  buttons.h  debug.cpp  debug.h  debug_translation.h  gpu.cpp  gpu.h  io_provider.h  kbgbemulation.cpp  kbgbemulation.h  kemulation.cpp  kemulation.h  log.h  main.cpp  mbc.h  mbc1.cpp  mbcrom.cpp  mbcrom.h  mmu.h  sdl_io_provider.cpp  sdl_io_provider.h  squarewave_generator.h  timer.cpp  timer.h  timewarp.cpp  timewarp.h  types.h  wxapp.cpp  wxapp.h  wxevents.h  wxiopane.cpp  wxiopane.h  wxioprovider.cpp  wxioprovider.h  wxmainframe.cpp  (+1 more)
KarouGB GTEST/: bogus_ioprovider.h  gputest.h  instrtest.h  main.cpp  vram_dma_transfer_test.h
KarouGB Unit Tests/: main.cpp  mbc3rtctest.h  newmemtest.h
KarouGB.xcodeproj/: project.pbxproj
KarouGB.xcodeproj/project.xcworkspace/: contents.xcworkspacedata
KarouGB.xcodeproj/xcuserdata/daniel.xcuserdatad/xcschemes/: KarouGB.xcscheme  xcschememanagement.plist
KarouGB/cpu/: cpu.cpp  cpu.h  cpu_inline.h  cpu_ops.h
KarouGB/io/: io_provider.h  sdl_io_provider.cpp  sdl_io_provider.h
KarouGB/mem/: cart_loader.cpp  cart_loader.h  cartridge.cpp  cartridge.h  mem.cpp  mem.h  mem_mbc.h
KarouGB/mem/mbc/: cart_mbc0.cpp  cart_mbc0.h  cart_mbc1.cpp  cart_mbc1.h  cart_mbc3.cpp  cart_mbc3.h  cart_mbc3_rtc.cpp  cart_mbc3_rtc.h
KarouGB/memory/: mbc1.cpp  mbc1.h  mbcrom.cpp  mmu.cpp  mmu.h
KarouGB/os/: os.h
KarouGB/os/osx/: ResourcePath.hpp  osx.cpp  osx.h
KarouGB/sound/: apu.cpp  apu.h  apu_channel.h  apu_noise_channel.cpp  apu_noise_channel.h  apu_squarewave_channel.cpp  apu_squarewave_channel.h
KarouGB/sound/Raw/: noise_generator.h  signal_generator.h  sound.cpp  sound.h
KarouGB/test/: mbc1test.h
src/: buttons.cpp  buttons.h  debug.cpp  debug.h  debug_translation.h  emulator.cpp  emulator.h  gpu.cpp  gpu.h  log.h  rom_bios.h  timer.cpp  timer.h  timewarp.h  types.h
src/cpu/: cpu.cpp  cpu.h  cpu_inline.h  cpu_mapping.h  cpu_ops.h  cpu_timing.h
src/io/: io_provider.h
src/mem/: cart_loader.cpp  cart_loader.h  cart_mbc.h  cartridge.cpp  cartridge.h  mem.cpp  mem.h
src/mem/mbc/: cart_mbc0.cpp  cart_mbc0.h  cart_mbc1.cpp  cart_mbc1.h  cart_mbc3.cpp  cart_mbc3.h  cart_mbc3_rtc.cpp  cart_mbc3_rtc.h
src/os/osx/: ResourcePath.mm
src/qt/: keyeventmapper.cpp  keyeventmapper.h  main.cpp  mainwindow.cpp  mainwindow.h  qtioprovider.cpp  qtioprovider.h  screenwidget.cpp  screenwidget.h
src/qt/debugger/: vcpustatusview.cpp  vcpustatusview.h  vdebug.cpp  vdebug.h  vmemorymodel.cpp  vmemorymodel.h  vmemoryview.cpp  vmemoryview.h  vtools.cpp  vtools.h
src/resources/icons/: license.txt
src/sound/: apu.h  apu_channel.h
src/sound/Raw/: noise_generator.h  sound.h  squarewave_generator.h
test/: bogus_ioprovider.h  gbctest_doublespeedmode.h  gputest.h  instrtest.h  main.cpp  vram_dma_transfer_test.h
